--- a/index.html
+++ b/index.html
@@ -1,113 +1,188 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=raleway">
-    <title>7 Blood Diamonds </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>Diamonds Redo</title>
 </head>
+
 <body>
-    <div class="container">
+<div class="container">
 
-        <div class="header">
-            <p>FREE STANDARD SHIPPING ON ALL ORDERS</p>
+    <div class="header">
+        <p>FREE STANDARD SHIPPING ON ALL ORDERS</p>
+    </div>
+
+    <div class="menu">
+        <div class="account">
+            <img id="burger" src="assets/burger.png">
+            <img id="toplogo" src="assets/logo.png">
+            <img id="cart" src="assets/cart.png">
+            <p>ACCOUNT</p>
+            <p>SEARCH</p>
+            <p>CART (0)</p>
         </div>
-
-        <div class="menu">
-            <div class="account">
-                <img id="burger" src="assets/burger.png">
-                <img id="toplogo" src="assets/logo.png">
-                <img id="cart" src="assets/cart.png">
-
-                <p>ACCOUNT</p>
-                <p>SEARCH</p>
-                <p>CART (0)</p>
-            </div>
 
         <div class="topmenu">
-                <p>NEW</p>
-                <p>SHOP</p>
-                <p>SHIRTS</p>
-                <p>PANTS</p>
-                <p>SHORTS</p>
-         </div>
+            <p>NEW</p>
+            <p>SHOP</p>
+            <p>SHIRTS</p>
+            <p>PANTS</p>
+            <p>SHORTS</p>
         </div>
-        
-        <div class="redvan">
-            <img id="vanlife" src="assets/redvan.jpg">
-            <img id="vanlifemob" src="assets/vanmobile.png">
-        </div>  
-
-        <div class="shirts">
-            <img id="short" src="assets/short.png">
-            <img id="hybrid" src="assets/hybrid.png">
-            <img id="floral" src="assets/floral.png">
-        </div>
-        <div class="pants">
-            <img id="polo" src="assets/polo.png">
-            <img id="pants" src="assets/pants.png">
-            <img id="blazer" src="assets/blazer.png">
-        </div>
-        <div class="officialshirts">
-            <img src="assets/multi.png">
-        </div>
-
-        <div class="follow">
-                <p>FOLLOW US @ 7BLOOD DIAMONDS</p>
-        </div>
-
-        <div class="caro">
-            <img id="blueshorts" src="assets/blueshorts.png">
-            <img id="uglyshirt" src="assets/uglyshirt.png">
-            <img id="blackdude" src="assets/blackdude.png">
-            <img id="chair" src="assets/chair.png">
-            <img id="flowershirt" src="assets/flowershirt.png">
-            <!--3 pics below are only visibile with mob/tab-->
-            <img id="bluetab" src="assets/blueshirttab.png">
-            <img id="blacktab" src="assets/blackdudetab.png">
-            <img id="chairtab" src="assets/chairtab.png">
-        </div>
-
-        <div class="footer">
-
-            <div class="service">
-                <ul>
-                    <li>CUSTOMER SERVICE</li><br>
-                    <li>Contact Us</li>
-                    <li>Returns</li>
-                    <li>Shipping</li>
-                    <li>FA-Q's</li>
-                </ul>
-            </div>
-
-            <div class="company">
-                <ul>
-                    <li>OUR COMPANY</li><br>
-                    <li>Gift Cards</li>
-                    <li>Privacy Policy</li>
-                    <li>Terms & Conditions</li>
-                    <li>About Us</li>
-                </ul>
-            </div>
-
-            <div class="signup">
-                <ol>
-                    <li>SIGN UP AND SAVE</li><br>
-                    <li>Gain early access, exclusive offers and more. Sign up and save 10% OFF your first order.</li><br>
-                </ol>
-                <input placeholder="WHATS YOUR FRIGGIN' EMAIL ADDRESS?"><br><br>
-                <button type="button">SUBSCRIBE</button>
-            </div>
-        </div>
-            <div class="creditcards">
-                <p>© 7BLOOD DIAMONDS</p>
-                <img id="cards" src="assets/cards.png">
-            </div>
-
-
-
     </div>
+
+    <div class="redvan">
+        <img id="vanlife" src="assets/redvan.jpg">
+        <img id="vanlifemob" src="assets/vanmobile.png">
+    </div>
+
+    <div class="shirts">
+        <img id="short" src="assets/short.png">
+        <img id="hybrid" src="assets/hybrid.png">
+        <img id="floral" src="assets/floral.png">
+    </div>
+    <div class="pants">
+        <img id="polo" src="assets/polo.png">
+        <img id="pants" src="assets/pants.png">
+        <img id="blazer" src="assets/blazer.png">
+    </div>
+
+    <div class="card bg-dark text-white">
+        <img src="assets/uglyshirts.png" class="card-img" alt="...">
+        <div class="card-img-overlay"></div>
+    </div>
+
+
+
+
+
+
+    <div class="officialshirts">
+        <img src="assets/multi.png">
+    </div>
+
+    <div class="follow">
+        <p>FOLLOW US @ 7BLOOD DIAMONDS</p>
+    </div>
+
+
+
+
+<div class="card-group">
+    <div class="card">
+        <img src="assets/caro1.png" 
+        class="card-img-top" alt="...">
+        <div class="card-body"></div>
+    </div>
+    <div class="card">
+        <img src="assets/caro2.png" 
+        class="card-img-top" alt="...">
+        <div class="card-body"></div>
+    </div>
+    <div class="card">
+        <img src="assets/caro3.png" 
+        class="card-img-top" alt="...">
+        <div class="card-body"></div>
+    </div>
+    <div class="card">
+        <img src="assets/caro4.png" 
+        class="card-img-top" alt="...">
+        <div class="card-body"></div>
+    </div>
+    <div class="card">
+        <img src="assets/caro5.png" 
+        class="card-img-top" alt="...">
+        <div class="card-body"></div>
+    <div class="card">
+        <img src="assets/caro6.png" 
+        class="card-img-top" alt="...">
+        <div class="card-body"></div>
+    </div>
+    <div class="card">
+        <img src="assets/caro7.png" 
+        class="card-img-top" alt="...">
+        <div class="card-body"></div>
+    </div>
+    <div class="card">
+        <img src="assets/caro8.png" 
+        class="card-img-top" alt="...">
+        <div class="card-body"></div>
+    </div>
+    <div class="card">
+        <img src="assets/caro9.png" 
+        class="card-img-top" alt="...">
+        <div class="card-body"></div>
+    </div>
+    <div class="card">
+        <img src="assets/caro10.png" 
+        class="card-img-top" alt="...">
+        <div class="card-body"></div>        
+    </div>
+</div>
+
+
+
+
+
+        
+    <div class="footer">
+
+        <div class="service">
+            <ul>
+                <li>CUSTOMER SERVICE</li><br>
+                <li>Contact Us</li>
+                <li>Returns</li>
+                <li>Shipping</li>
+                <li>FA-Q's</li>
+            </ul>
+        </div>
+
+        <div class="company">
+            <ul>
+                <li>OUR COMPANY</li><br>
+                <li>Gift Cards</li>
+                <li>Privacy Policy</li>
+                <li>Terms & Conditions</li>
+                <li>About Us</li>
+            </ul>
+        </div>
+
+        <div class="sign-up">
+            <ol>
+                <li>SIGN UP AND SAVE</li><br>
+                <li>Gain early access, exclusive offers and more. Sign up and save 10% OFF your first order.</li><br>
+            </ol>
+            <input placeholder="WHATS YOUR FRIGGIN' EMAIL ADDRESS?"><br><br>
+            <button type="button">SUBSCRIBE</button>
+        </div>
+    </div>
+    <div class="creditcards">
+        <p>© 7BLOOD DIAMONDS</p>
+        <img id="cards" src="assets/cards.png">
+    </div>
+
+
+
+</div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
