stopping point, going to remake different site.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 
 <head>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=raleway">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Diamonds Redo</title>
+    <style>
+        img {
+            max-width: 400px;
+        }
+    </style>
 </head>
 
 <body>
@@ -22,7 +27,7 @@
     <div class="menu">
         <div class="account">
             <img id="burger" src="assets/burger.png">
-            <img id="toplogo" src="assets/logo.png">
+            <img id="top-logo" src="assets/logo.png">
             <img id="cart" src="assets/cart.png">
             <p>ACCOUNT</p>
             <p>SEARCH</p>
@@ -38,21 +43,63 @@
         </div>
     </div>
 
-    <div class="redvan">
-        <img id="vanlife" src="assets/redvan.jpg">
-        <img id="vanlifemob" src="assets/vanmobile.png">
-    </div>
 
-    <div class="shirts">
-        <img id="short" src="assets/short.png">
-        <img id="hybrid" src="assets/hybrid.png">
-        <img id="floral" src="assets/floral.png">
+        <div class="card bg-dark text-white">
+            <img src="assets/main.png" class="card-img" alt="...">
+            <div class="card-img-overlay"></div>
+        </div>
+
+
+<div class="container-fluid">
+        <div class="row justify-content-around">
+        <div class="col-sm-4 col-md-3"><img src="assets/sleeves.png"></div>
+        <div class="col-sm-4 col-md-3"><img src="assets/hybrid.png"></div>
+        <div class="col-sm-4 col-md-3"><img src="assets/floral.png"></div>
+        <div class="col-sm-4 col-md-3"><img src="assets/blazers.png"></div>
+        <div class="col-sm-4 col-md-3"><img src="assets/pants.png"></div>
+        <div class="col-sm-4 col-md-3"><img src="assets/polo.png"></div>
+        </div>
+</div>
+
+
+
+
+
+<div class="card-deck">
+    <div class="card col-sm-4">
+        <img src="assets/sleeves.png" class="card-img-top" alt="...">
+        <div class="card-body">
+        </div>
     </div>
-    <div class="pants">
-        <img id="polo" src="assets/polo.png">
-        <img id="pants" src="assets/pants.png">
-        <img id="blazer" src="assets/blazer.png">
+    <div class="card col-sm-4">
+        <img src="assets/hybrid.png" class="card-img-top" alt="...">
+        <div class="card-body">
+        </div>
     </div>
+    <div class="card col-sm-4">
+        <img src="assets/floral.png" class="card-img-top" alt="...">
+        <div class="card-body">
+        </div>
+    </div>
+    <div class="card col-sm-4">
+        <img src="assets/blazers.png" class="card-img-top" alt="...">
+        <div class="card-body">
+        </div>
+    </div>
+    <div class="card col-sm-4">
+        <img src="assets/pants.png" class="card-img-top" alt="...">
+        <div class="card-body">
+        </div>
+    </div>
+    <div class="card col-sm-4">
+        <img src="assets/polo.png" class="card-img-top" alt="...">
+        <div class="card-body">
+        </div>
+    </div>
+</div>
+
+
+<!--THIS IS THE SECTION UNDER THE SIX IMAGES-->
 
     <div class="card bg-dark text-white">
         <img src="assets/uglyshirts.png" class="card-img" alt="...">
@@ -76,6 +123,7 @@
 
 
 <div class="card-group">
+    <div class="row">
     <div class="card">
         <img src="assets/caro1.png" 
         class="card-img-top" alt="...">
@@ -125,6 +173,8 @@
         class="card-img-top" alt="...">
         <div class="card-body"></div>        
     </div>
+    </div>
+</div>    
 </div>
 
 
